  (Kalle)
- Changed the $context parameter on copy() to actually have an effect. (Kalle)
- Fixed possible crash in mssql_fetch_batch(). (Kalle)
- Fixed inconsistent backlog default value (-1) in FPM on many systems. (fat)
- Fixed bug in the Windows implementation of dns_get_record, where the two
  last parameters wouldn't be filled unless the type were DNS_ANY (Gustavo).

- Fixed bug #53021 (In html_entity_decode, failure to convert numeric entities
  with ENT_NOQUOTES and ISO-8859-1). Fixed and extended the fix of ENT_NOQUOTES 
  in html_entity_decode that had introduced the bug (rev #185591) to other
  encodings. Additionaly, html_entity_decode() now doesn't decode &#34; if
  ENT_NOQUOTES is given. (Gustavo)
- Fixed bug #52981 (Unicode casing table was out-of-date. Updated with
  UnicodeData-6.0.0d7.txt and included the source of the generator program with
  the distribution) (Gustavo).
- Fixed bug #52971 (PCRE-Meta-Characters not working with utf-8). (Felipe)
- Fixed bug #52947 (segfault when ssl stream option capture_peer_cert_chain
  used). (Felipe)
- Fixed bug #52944 (Invalid write on second and subsequent reads with an
  inflate filter fed invalid data). (Gustavo)
- Fixed bug #52941 (The 'iconv_mime_decode_headers' function is skipping
  headers). (Adam)
- Fixed bug #52931 (strripos not overloaded with function overloading enabled).
  (Felipe)
- Fixed bug #52929 (Segfault in filter_var with FILTER_VALIDATE_EMAIL with
  large amount of data). (Adam)
- Fixed bug #52926 (zlib fopen wrapper does not use context). (Gustavo)
- Fixed bug #52906 (gmp_mod returns negative result when non-negative is 
  expected). (Stas)
- Fixed bug #52891 (Wrong data inserted with mysqli/mysqlnd when using
  mysqli_stmt_bind_param and value> PHP_INT_MAX). (Andrey)
- Fixed bug #52879 (Objects unreferenced in __get, __set, __isset or __unset
  can be freed too early). (mail_ben_schmidt at yahoo dot com dot au, Dmitry)
- Fixed bug #52849 (GNU MP invalid version match). (Adam)